--- a/Q5 webpage.html
+++ b/Q5 webpage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>This is a simple webpage for Question</h1>
+        <h1>This is a simple webpage for Question 5</h1>
         <p>A <b>bolded sentence</b> for the webage.</p>
+        <p>An <i>bolded sentence</i> for the webage.</p>
     </body>
 </html>
