--- a/Q5 webpage.html
+++ b/Q5 webpage.html
@@ -3,6 +3,6 @@
     <body>
         <h1>This is a simple webpage for Question 5</h1>
         <p>A <b>bolded sentence</b> for the webage.</p>
-        <p>An <i>bolded sentence</i> for the webage.</p>
+        <p>An <i>italicized sentence</i> for the webage.</p>
     </body>
 </html>
